# HTTP-Server

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  http_server
serverroot/: index.html  scripts.js  styles.css
serverroot/assets/: message.txt
src/: http_server.c  http_server.h  main.c
